# cscsca

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: rust.yml
.pre-commit/: exec_commands.py
cscsca_macros/: Cargo.toml
cscsca_macros/src/: io_fn.rs  io_test.rs  lib.rs
docs/: README_template.md  writing_rules.md
src/: applier.rs  async_cscsca.rs  cli_parser.rs  color.rs  commands.rs  demo.sca  escaped_strings.rs  help.txt  io_macros.rs  keywords.rs  lib.rs  main.rs  meta_tokens.rs  phones.rs  rules.rs  runtime.rs  runtime_cmd.rs  runtime_cmds.rs  sub_string.rs  tests.rs  tokens.rs
src/applier/: async_applier.rs  matcher.rs  mod.rs  tests.rs
src/applier/matcher/: empty_form_tests.rs  len_tests.rs  ltr_tests.rs  rtl_tests.rs
src/assets/: base.sca  demo.sca  help.txt  template.sca
src/async_cscsca/: async_test.rs
src/cli_tools/: ansi.rs  cli_io.rs  cli_parser.rs  mod.rs
src/executor/: commands.rs  getter.rs  io_events.rs  mod.rs  runtime.rs  tests.rs
src/executor/appliable_rules/: mod.rs  tests.rs
src/ir/: mod.rs  prefix.rs  tests.rs  token_checker.rs  tokenization_data.rs  tokenizer.rs  tokens.rs
src/ir/token_checker/: mod.rs  tests.rs
src/lexer/: mod.rs  sir.rs  substring.rs  token_types.rs
src/matcher/: choices.rs  len_tests.rs  ltr_tests.rs  match_state.rs  mod.rs  pattern.rs  phones.rs  rtl_tests.rs  rule_pattern.rs
src/matcher/patterns/: check_box.rs  cond.rs  gap.rs  list.rs  mod.rs  non_bound.rs  optional.rs  repetition.rs  rule.rs  selection.rs
src/matcher/patterns/ir_to_patterns/: mod.rs  tests.rs
src/matcher/patterns/tests/: ltr_pattern_tests.rs  ltr_rules_tests.rs  mod.rs  rtl_pattern_tests.rs  rtl_rules_tests.rs
src/matcher/tests/: ltr_pattern_tests.rs  ltr_rules_tests.rs  mod.rs  rtl_pattern_tests.rs
src/phones/: mod.rs  tests.rs
src/rules/: conditions.rs  mod.rs  sound_change_rule.rs  tests.rs  tokens.rs
src/rules/conditions/: mod.rs  tests.rs
src/tests/: demo_tests.rs  failure_tests.rs  mod.rs  sys_time_tests.rs
src/tokens/: compile_time_data.rs  ir.rs  prefix.rs  tests.rs  token_checker.rs
src/tokens/token_checker/: tests.rs
src/tooling_gen/: mod.rs
src/tooling_gen/vscode_grammar/: mod.rs
src/tooling_gen/vscode_grammar/assets/: package.json
