[package]
name = "cscsca"
authors = ["Charles Feyen"]
version = "0.16.1"
edition = "2024"
readme = "README.md"
keywords = ["linguistics", "conlang"]
categories = []
description = "Charles' Super Cool Sound Change Applier - A tool for simulating phonetic evolution"

[features]
ansi = []
docs = []
gen_vscode_grammar = []

[profile.release]
lto = true
strip = "symbols"
codegen-units = 1
panic = "abort"

[dependencies]