[package]
name = "cscsca"
authors = ["Charles Feyen"]
version = "0.25.1"
edition = "2024"
readme = "README.md"
keywords = ["linguistics", "conlang", "sound_change_applier"]
license = "MIT"
categories = ["command-line-utilities", "simulation"]
description = "Charles' Super Cool Sound Change Applier - A tool for simulating phonetic evolution"
repository = "https://github.com/cfeyen/cscsca"

[lints.clippy]
non_minimal_cfg = { level = "allow", priority = -1 }
correctness = { level = "warn", priority = -2 }
suspicious  = { level = "warn", priority = -2 }
complexity = { level = "warn", priority = -2 }
perf = { level = "warn", priority = -2 }
pedantic = { level = "warn", priority = -2 }
panic = { level = "warn", priority = -2 }
style = { level = "warn", priority = -2 }
cargo = { level = "warn", priority = -2 }

[lints.rust]
missing_docs = { level = "warn", priority = -2 }

[features]
async_io = ["cscsca_macros/async_io"]
docs = []

[profile.release]
lto = true
strip = "symbols"
codegen-units = 1
panic = "abort"

[dependencies]
cscsca_macros = { path = "cscsca_macros" }

[dev-dependencies]
# This project uses "pollster" (Copyright (c) 2020-2021 Joshua Barretto), licensed under the MIT License.
# Available at https://github.com/zesterer/pollster.
pollster = "0.4.0"

[build-dependencies]
